intermediat-commit still need test to finalise api

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -13,7 +13,19 @@ RUN rm -rf node_modules
 # Install dependencies
 RUN yarn install --legacy-peer-deps
 
+# Install sqlite3 CLI tool
+RUN apt-get update && apt-get install -y sqlite3
+
 # Copy the rest of the application code
 COPY . ./
 
+# Copy SQL initialization file and custom script
+COPY ./initialize/init.sql ./
+COPY ./initialize/check-and-init.sh ./
+RUN chmod +x check-and-init.sh
 
+# Run the custom script to initialize the database
+RUN ./check-and-init.sh
+
+# Command to run the application
+CMD ["yarn", "start:dev"]
