--- a/api/package.json
+++ b/api/package.json
@@ -70,7 +70,9 @@
       "^.+\\.(t|j)s$": "ts-jest"
     },
     "collectCoverageFrom": [
-      "**/*.(t|j)s"
+      "**/*.(t|j)s",
+      "!main.ts",
+      "!database/database.config.ts"
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
