--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,18 +7,35 @@ services:
       - ./api:/app
       - /app/node_modules
     ports:
-      - "1234:3000"
+      - "3000:3000"
     environment:
       - NODE_ENV=development
     command: yarn start:dev
+
   app:
     build:
       context: frontend
     ports:
       - "3001:3001"
-      - "3000:3000"
+      - "6000:6000"
     volumes:
       - ./frontend:/app
       - /app/node_modules
     environment:
       - NODE_ENV=development
+    command: yarn start
+
+  storybook:
+    build:
+      context: frontend
+    ports:
+      - "6006:6006"
+    volumes:
+      - ./frontend:/app
+      - /app/node_modules
+    environment:
+      - NODE_ENV=development
+      - CI=true
+    command: yarn storybook
+    depends_on:
+      - app
