--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,12 +4,11 @@
   "private": true,
   "type": "module",
   "dependencies": {
+    "@ant-design/icons": "^5.4.0",
     "@emotion/react": "^11.12.0",
     "@emotion/styled": "^11.12.0",
     "@eslint/eslintrc": "^3.1.0",
-    "@mui/icons-material": "^5.16.4",
-    "@mui/material": "^5.16.4",
-    "@mui/x-charts": "^7.11.0",
+    "@parcel/babel-preset-env": "^2.12.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -20,7 +19,7 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.34",
     "@typescript-eslint/eslint-plugin": "^7.16.1",
-    "chart.js": "^4.4.3",
+    "antd": "^5.20.0",
     "eslint-config-airbnb-typescript": "^18.0.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsx-a11y": "^6.9.0",
@@ -39,7 +38,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "rm -rf ./.parcel-cache && yarn parcel serve public/index.html --port 1234  --dist-dir ./dist & browser-sync start --host 192.168.1.2 --proxy \"localhost:1234\" --files \"dist/**/*.*\"",
+    "start": "rm -rf ./.parcel-cache && yarn parcel serve public/index.html --port 6000 --dist-dir ./dist & browser-sync start --host 192.168.1.2 --proxy \"localhost:6000\" --files \"dist/**/*.*\" --port 6001",
     "start:react": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -47,12 +46,15 @@
     "lint": "eslint 'src/**/*.{ts,tsx}' --max-warnings=0",
     "start-parn": "parcel serve public/index.html",
     "build:yarn": "parcel build src/index.html",
-    "test:cov": "NODE_OPTIONS='--experimental-vm-modules' jest --coverage"
+    "test:cov": "jest --coverage",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
-      "react-app/jest"
+      "react-app/jest",
+      "plugin:storybook/recommended"
     ]
   },
   "browserslist": {
@@ -72,18 +74,31 @@
     "@babel/preset-env": "^7.25.3",
     "@babel/preset-react": "^7.24.7",
     "@babel/preset-typescript": "^7.24.7",
+    "@chromatic-com/storybook": "^1.6.1",
+    "@storybook/addon-essentials": "^8.2.7",
+    "@storybook/addon-interactions": "^8.2.7",
+    "@storybook/addon-links": "^8.2.7",
+    "@storybook/addon-onboarding": "^8.2.7",
+    "@storybook/blocks": "^8.2.7",
+    "@storybook/preset-create-react-app": "^8.2.7",
+    "@storybook/react": "^8.2.7",
+    "@storybook/react-webpack5": "^8.2.7",
+    "@storybook/test": "^8.2.7",
     "@types/babel__core": "^7",
     "@types/babel__preset-env": "^7",
+    "@types/eslint": "^8",
     "@types/identity-obj-proxy": "^3",
     "@types/mailgun-js": "^0",
+    "@types/prop-types": "^15",
     "@types/react-test-renderer": "^18",
     "@typescript-eslint/parser": "^7.16.1",
     "babel-jest": "^29.7.0",
     "babel-plugin-styled-components": "^2.1.4",
     "browser-sync": "^3.0.2",
     "concurrently": "^8.2.2",
-    "eslint": "^9.7.0",
+    "eslint": "8.57.0",
     "eslint-import-resolver-node": "^0.3.9",
+    "eslint-plugin-storybook": "^0.8.0",
     "history": "^5.3.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
@@ -93,7 +108,10 @@
     "nodemon": "^3.1.4",
     "parcel": "^2.12.0",
     "process": "^0.11.10",
+    "prop-types": "^15.8.1",
     "react-test-renderer": "^18.3.1",
-    "ts-jest": "^29.2.4"
+    "storybook": "^8.2.7",
+    "ts-jest": "^29.2.4",
+    "webpack": "^5.93.0"
   }
 }
