finished changes and added toasts

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^4.6.2",
+    "jest-mock-axios": "^4.7.3",
     "mailgun-js": "^0.22.0",
     "prettier": "^3.3.3",
     "react": "^18.3.1",
@@ -86,6 +87,7 @@
     "@storybook/react": "^8.2.7",
     "@storybook/react-webpack5": "^8.2.7",
     "@storybook/test": "^8.2.7",
+    "@types/axios": "^0.14.0",
     "@types/babel__core": "^7",
     "@types/babel__preset-env": "^7",
     "@types/eslint": "^8",
