--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,8 @@
     "@emotion/styled": "^11.12.0",
     "@eslint/eslintrc": "^3.1.0",
     "@parcel/babel-preset-env": "^2.12.0",
+    "@storybook/jest": "^0.2.3",
+    "@storybook/testing-library": "^0.2.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -21,6 +23,9 @@
     "@typescript-eslint/eslint-plugin": "^7.16.1",
     "antd": "^5.20.0",
     "axios": "^1.7.3",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.8",
+    "enzyme-to-json": "^3.6.2",
     "eslint-config-airbnb-typescript": "^18.0.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsx-a11y": "^6.9.0",
@@ -90,6 +95,8 @@
     "@types/axios": "^0.14.0",
     "@types/babel__core": "^7",
     "@types/babel__preset-env": "^7",
+    "@types/enzyme": "^3",
+    "@types/enzyme-adapter-react-16": "^1",
     "@types/eslint": "^8",
     "@types/identity-obj-proxy": "^3",
     "@types/mailgun-js": "^0",
