--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,9 +23,6 @@
     "@typescript-eslint/eslint-plugin": "^7.16.1",
     "antd": "^5.20.0",
     "axios": "^1.7.3",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.8",
-    "enzyme-to-json": "^3.6.2",
     "eslint-config-airbnb-typescript": "^18.0.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsx-a11y": "^6.9.0",
@@ -88,15 +85,15 @@
     "@storybook/addon-links": "^8.2.7",
     "@storybook/addon-onboarding": "^8.2.7",
     "@storybook/blocks": "^8.2.7",
+    "@storybook/builder-vite": "^8.2.7",
     "@storybook/preset-create-react-app": "^8.2.7",
     "@storybook/react": "^8.2.7",
+    "@storybook/react-vite": "^8.2.7",
     "@storybook/react-webpack5": "^8.2.7",
     "@storybook/test": "^8.2.7",
     "@types/axios": "^0.14.0",
     "@types/babel__core": "^7",
     "@types/babel__preset-env": "^7",
-    "@types/enzyme": "^3",
-    "@types/enzyme-adapter-react-16": "^1",
     "@types/eslint": "^8",
     "@types/identity-obj-proxy": "^3",
     "@types/mailgun-js": "^0",
@@ -123,6 +120,7 @@
     "react-test-renderer": "^18.3.1",
     "storybook": "^8.2.7",
     "ts-jest": "^29.2.4",
+    "vite": "^5.3.5",
     "webpack": "^5.93.0"
   }
 }
